--- a/index.html
+++ b/index.html
@@ -7,36 +7,46 @@
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-family: "Segoe UI", Arial, sans-serif;
       background: #f4f8fb;
       color: #333;
     }
 
     /* Navbar */
     header {
-      background: #0073e6;
+      background: linear-gradient(135deg, #0073e6, #005bb5);
       color: white;
-      padding: 15px;
+      padding: 20px;
       text-align: center;
       box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      position: sticky;
+      top: 0;
+      z-index: 10;
     }
     header h1 {
       margin: 0;
-      font-size: 24px;
+      font-size: 26px;
+      letter-spacing: 0.5px;
     }
 
     /* Job Section */
     main {
-      max-width: 900px;
+      max-width: 1100px;
       margin: auto;
       padding: 20px;
+      display: grid;
+      gap: 20px;
     }
     .job {
       background: white;
-      padding: 20px;
-      margin-bottom: 20px;
-      border-radius: 10px;
-      box-shadow: 0px 3px 8px rgba(0,0,0,0.1);
+      padding: 24px;
+      border-radius: 12px;
+      box-shadow: 0px 4px 12px rgba(0,0,0,0.08);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .job:hover {
+      transform: translateY(-4px);
+      box-shadow: 0px 6px 16px rgba(0,0,0,0.12);
     }
     .job h2 {
       margin-top: 0;
@@ -46,31 +56,43 @@
     .job p {
       line-height: 1.6;
       font-size: 15px;
-      white-space: pre-line; /* keep formatting */
+      white-space: pre-line;
+    }
+
+    /* Button */
+    .btn-wrapper {
+      display: flex;
+      justify-content: center;
+      margin-top: 15px;
     }
     .btn {
-      display: inline-block;
-      margin-top: 10px;
       background: #0073e6;
       color: white;
-      padding: 10px 16px;
-      border-radius: 6px;
+      padding: 12px 22px;
+      border-radius: 8px;
       text-decoration: none;
       font-weight: bold;
-      transition: background 0.3s;
+      transition: all 0.3s ease;
+      text-align: center;
+      min-width: 200px;
     }
     .btn:hover {
       background: #005bb5;
+      transform: scale(1.05);
     }
 
     /* Contact */
     .contact {
       text-align: center;
-      margin-top: 40px;
+      margin-top: 20px;
       font-size: 15px;
       background: #eef6fc;
-      padding: 15px;
-      border-radius: 8px;
+      padding: 18px;
+      border-radius: 10px;
+      box-shadow: 0px 2px 6px rgba(0,0,0,0.05);
+    }
+    .contact b {
+      color: #0073e6;
     }
 
     /* Footer */
@@ -78,22 +100,29 @@
       background: #333;
       color: white;
       text-align: center;
-      padding: 12px;
+      padding: 15px;
       margin-top: 30px;
       font-size: 14px;
     }
 
     /* Responsive */
-    @media (max-width: 600px) {
+    @media (max-width: 768px) {
       header h1 {
-        font-size: 20px;
+        font-size: 22px;
       }
       .job h2 {
         font-size: 18px;
       }
+      main {
+        padding: 15px;
+      }
+    }
+    @media (max-width: 480px) {
       .btn {
         width: 100%;
-        text-align: center;
+        min-width: unset;
+        padding: 14px;
+        font-size: 16px;
       }
     }
   </style>
@@ -123,7 +152,9 @@
 <strong>Qualification:</strong> Graduate  
 <strong>Experience:</strong> 5+ years (Senior RM – 6+ yrs, RM – 3–6 yrs)  
       </p>
-      <a href="https://forms.gle/MeJpWsT4mvWVo6jm7" class="btn" target="_blank">Apply via Google Form</a>
+      <div class="btn-wrapper">
+        <a href="https://forms.gle/MeJpWsT4mvWVo6jm7" class="btn" target="_blank">Apply via Google Form</a>
+      </div>
     </div>
 
     <div class="job">
@@ -142,7 +173,9 @@
 <strong>Qualification:</strong> Graduate  
 <strong>Experience:</strong> 5+ years (Senior RM – 6+ yrs, RM – 3–6 yrs)  
       </p>
-      <a href="https://forms.gle/MeJpWsT4mvWVo6jm7" class="btn" target="_blank">Apply via Google Form</a>
+      <div class="btn-wrapper">
+        <a href="https://forms.gle/MeJpWsT4mvWVo6jm7" class="btn" target="_blank">Apply via Google Form</a>
+      </div>
     </div>
 
     <div class="job">
@@ -163,12 +196,14 @@
 <strong>Experience:</strong> 3+ years in Current Account / Trade-Forex sales or RM role.  
 <strong>Salary Range:</strong> 6–8 LPA  
       </p>
-      <a href="https://forms.gle/MeJpWsT4mvWVo6jm7" class="btn" target="_blank">Apply via Google Form</a>
+      <div class="btn-wrapper">
+        <a href="https://forms.gle/MeJpWsT4mvWVo6jm7" class="btn" target="_blank">Apply via Google Form</a>
+      </div>
     </div>
 
     <!-- Contact -->
     <div class="contact">
-      <p>If you have any queries, contact us at: <b>businessy915@gmail.com</b></p>
+      <p>If you have any queries, contact us at: <b>mdshafatullah@rahmanimission.org</b></p>
     </div>
   </main>
 
